--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
 }
 
 html, body, #root {
+  height: 100dvh;
   height: 100%;
   width: 100%;
   overflow-x: hidden;
@@ -39,7 +40,7 @@ body {
   -webkit-font-smoothing: antialiased;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
 }
 
 ::selection {
